# typilot

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md  build.gradle.kts  gradle.properties  rust-toolchain.toml  settings.gradle.kts  uniffi.toml
.cargo/: config.toml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: ChicoryCompilerTask.kt  EndiveCompilerTask.kt
crates/enum-mirror/: Cargo.toml  lib.rs
crates/typalize/: Cargo.toml
crates/typalize-wasm/: Cargo.toml
crates/typalize-wasm/src/: envelope.rs  lib.rs  syntax.rs  util.rs
crates/typalize/src/: envelope.rs  highlight_tag.rs  lib.rs  parser.rs  syntax.rs  syntax_kind.rs  syntax_mode.rs  token.rs  util.rs
gradle/: libs.versions.toml
scheme/: envelope.fbs
src/main/java/com/github/ixmoyren/typalize/: Core.java  Typalize.java  TypalizeResult.java
src/main/kotlin/com/github/ixmoyren/typilot/: Constants.kt  Environment.kt  MyBundle.kt  NativeLibrary.kt  Platform.kt  StartupActivity.kt  TinymistManager.kt  Typalize.kt  TypalizeUtils.kt  TypilotBundle.kt  TypstStartupActivity.kt
src/main/kotlin/com/github/ixmoyren/typilot/actions/: TinymistExportPdfAction.kt  TypstHelpAction.kt
src/main/kotlin/com/github/ixmoyren/typilot/highlight/: TypstColorSettingsPage.kt  TypstHighlightAnnotator.kt  TypstHighlightingColors.kt  TypstLexicalHighlighter.kt
src/main/kotlin/com/github/ixmoyren/typilot/injection/: TypstCodeBlockInjector.kt  TypstRawBlockInjector.kt  TypstRawBlockManipulator.kt
src/main/kotlin/com/github/ixmoyren/typilot/language/: TypstCommenter.kt  TypstFileIcon.kt  TypstFileType.kt  TypstLanguage.kt
src/main/kotlin/com/github/ixmoyren/typilot/lsp/: TinymistCodeLensFeature.kt  TinymistExportPdfHandler.kt  TinymistHelper.kt  TinymistInstaller.kt  TinymistLanguageClient.kt  TinymistLocator.kt  TinymistStreamConnectionProvider.kt  TypstLanguageServerFactory.kt
src/main/kotlin/com/github/ixmoyren/typilot/lsp/config/: TinymistConfig.kt  TinymistInstaller.kt  TinymistInstallerConfig.kt  TinymistSettingsContributor.kt
src/main/kotlin/com/github/ixmoyren/typilot/lsp/services/: TinymistDownloadService.kt  TinymistFindService.kt  TinymistLocateService.kt  TinymistLocatorService.kt
src/main/kotlin/com/github/ixmoyren/typilot/misc/: TypstTypedHandler.kt
src/main/kotlin/com/github/ixmoyren/typilot/preview/: TypstPreviewFileEditor.kt  TypstPreviewFileEditorProvider.kt  TypstTextEditorWithPreviewProvider.kt
src/main/kotlin/com/github/ixmoyren/typilot/psi/: TypstElementType.kt  TypstLexer.kt  TypstParser.kt  TypstParserDefinition.kt  TypstPsiElement.kt  TypstPsiElementVisitor.kt  TypstPsiFactory.kt  TypstPsiFile.kt  TypstSyntaxKind.kt  TypstTokenType.kt
src/main/kotlin/com/github/ixmoyren/typilot/services/: MyProjectService.kt  TinymistDownloadService.kt
src/main/kotlin/com/github/ixmoyren/typilot/settings/: TinymistConfigurable.kt  TinymistSettings.kt  TinymistSettingsForm.kt
src/main/kotlin/com/github/ixmoyren/typilot/spellchecker/: TypstSpellcheckingStrategy.kt
src/main/kotlin/com/github/ixmoyren/typilot/startup/: MyProjectActivity.kt
src/main/kotlin/com/github/ixmoyren/typilot/surround/: TypstSurroundDescriptor.kt
src/main/kotlin/com/github/ixmoyren/typilot/toolWindow/: MyToolWindowFactory.kt
src/main/resources/: tinymist.json
src/main/resources/colors/: darcula.xml  default.xml  high-contrast.xml  light.xml
src/main/resources/lsp/: installer.json
src/main/resources/messages/: TypilotBundle.properties
src/test/kotlin/com/github/ixmoyren/typilot/: MyPluginTest.kt  TypalizeTest.kt
xtask/: Cargo.toml  main.rs  task.rs  util.rs
