[workspace]
resolver = "3"
members = ["xtask", "crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
enum-mirror = { path = "crates/enum-mirror" }

serde-reflection = { git = "https://github.com/ixmoyren/serde-reflection" }
serde-saphyr = { version = "0.0.28" }

[profile.dev.package."*"]
opt-level = 2

[profile.dev-fast]
inherits = "dev"
opt-level = 2

[profile.release]
lto = "thin"
strip = "debuginfo"
codegen-units = 1