[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "xtask"
path = "main.rs"

[dependencies]
camino = "1.2.2"
cargo_metadata = "0.23.1"
clap = { version = "4.6.1", features = ["derive"] }
indoc = "2.0.7"
snafu = "0.9.0"
uniffi = { workspace = true, features = ["bindgen", "cargo-metadata"] }
