[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "xtask"
path = "main.rs"

[dependencies]
camino = "1.2.2"
cargo_metadata = "0.23.1"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
indicatif = { version = "0.18.4", default-features = false, features = ["unicode-segmentation", "unicode-width", "rayon"] }
lzma-rust2 = { version = "0.16.4", default-features = false, features = ["encoder", "xz", "std"] }
percent-encoding = "2.3.2"
reqwest = { version = "0.13.4", features = ["blocking", "json", "socks"] }
snafu = "0.9.1"
serde-generate = { git = "https://github.com/ixmoyren/serde-reflection", default-features = false, features = ["java"]}
serde-reflection = { workspace = true }
serde-saphyr = { workspace = true }
tar = "0.4.46"
zip = { version = "8.5", default-features = false, features = ["deflate"] }
